# GovNavigator

./: .env.example  .gitignore  README.md  build_embedding_index.py  claude_desktop_config.json  pyproject.toml  scrape_all_chapters.py  test_embedding_search.py  test_search.py  web_app.py
data/processed/: search_index.json
data/raw/: madison_ordinances.json
src/: models.py
src/mcp_server/: server.py
src/scraper/: municode_scraper.py
src/search/: embeddings.py  index.py
